# oxidize

./: .gitignore  Cargo.toml
src/: main.rs
src/commands/: mod.rs  movie.rs  steam.rs
src/commands/clear/: clear.rs
src/commands/code/: code.rs
src/commands/google/: google.rs
src/commands/movie/: movie.rs
src/commands/ping/: ping.rs
src/commands/steam/: mod.rs  steam.rs  user.rs
src/helpers/: get_versions.rs  mod.rs
