[package]
name = "learn_bot"
version = "0.1.0"
authors = ["AviusX <aviusanima@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
simple_logger = "1.13.0"
dotenv = "0.15.0"
chrono = "0.4.19"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
poise = { git = "https://github.com/kangalioo/poise", branch = "master" }